# django_admin_cookbook

./: pyproject.toml
apps/: admin.py  models.py
root/: settings.py  urls.py
templates/admin/: base_site.html
